Smoke simulator memory leak with high poly mesh emitter #40115

Closed
opened 2014-05-09 20:33:32 +02:00 by Kai Kostack · 10 comments

System Information
Windows 7 x64

Blender Version
Broken: Official Release
Worked: It appears to work with an older 2.69.3 build.

Short description of error
If you have a highly subdivided plane used as smoke emitter memory consumption will go up steadily even with a low res smoke domain. Also memory isn't freed when loading a new scene.

Exact steps for others to reproduce the error
The attached .blend file has such a setup, just press Alt+A and check the memory usage. At frame 200 it's at around 3,5 gb on my system, at frame 300 at 5,2 gb and so on.

smokesim-subdivided-emitter-mesh.blend

**System Information** Windows 7 x64 **Blender Version** Broken: Official Release Worked: It appears to work with an older 2.69.3 build. **Short description of error** If you have a highly subdivided plane used as smoke emitter memory consumption will go up steadily even with a low res smoke domain. Also memory isn't freed when loading a new scene. **Exact steps for others to reproduce the error** The attached .blend file has such a setup, just press Alt+A and check the memory usage. At frame 200 it's at around 3,5 gb on my system, at frame 300 at 5,2 gb and so on. [smokesim-subdivided-emitter-mesh.blend](https://archive.blender.org/developer/F88017/smokesim-subdivided-emitter-mesh.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @KaiKostack-3

Added subscriber: @KaiKostack-3
Member

Added subscriber: @scorpion81

Added subscriber: @scorpion81
Member

Hi,

i think i found the cause of this memoryleak. A copied derivedmesh was not freed after usage and copied again and again....

See the patch file for a (possible) fix.

scorpion81

Hi, i think i found the cause of this memoryleak. A copied derivedmesh was not freed after usage and copied again and again.... See the patch file for a (possible) fix. scorpion81
Miika Hamalainen was assigned by Bastien Montagne 2014-05-10 09:10:38 +02:00

Added subscriber: @mont29

Added subscriber: @mont29
Miika Hamalainen was unassigned by Bastien Montagne 2014-05-12 20:18:57 +02:00
Bastien Montagne self-assigned this 2014-05-12 20:18:57 +02:00

Added subscriber: @miikah

Added subscriber: @miikah

Actually, own fault…

Actually, own fault…

This issue was referenced by 355709432e

This issue was referenced by 355709432e4a6d2c1888025d46672f5bd16ab815

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 355709432e.

Closed by commit 355709432e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40115
No description provided.