Fix T40115: Smoke simulator memory leak with high poly mesh emitter.

Own error, all kudos go to scorpion81 (Martin Felke) for the nvestigation & patch!